fixes spacing under form type label

--- a/front-end/src/app/reports/form-type-dialog/form-type-dialog.component.scss
+++ b/front-end/src/app/reports/form-type-dialog/form-type-dialog.component.scss
@@ -15,4 +15,8 @@ img {
     font-family: var(--karla);
     font-size: 14px;
   }
+
+  .dialog-label {
+    display: inline-block;
+  }
 }
